<resources>
    <string name="app_name">Taraba State</string>
    <string name="title_activity_maps">Map</string>
    <string name="agric">The major occupation of the people of Taraba State is agriculture. Cash crops produced in the state include coffee, tea, groundnuts and cotton. Crops such as maize, rice, sorghum, millet, cassava, and yam are also produced in commercial quantity. In addition, cattle, sheep and goats are reared in large numbers, especially on the Mambilla Plateau, and along the Benue and Taraba valleys. Similarly, the people undertake other livestock production activities like poultry production, rabbit breeding and pig farming in fairly large scale. Communities living on the banks of River Benue, River Taraba, River Donga and Ibi engage in fishing all year round. Other occupational activities such as pottery, cloth-weaving, dyeing, mat-making, carving, embroidery and blacksmithing are also carried out in various parts of the State.</string>
    <string name="culture">The government has made concerted efforts to improve areas of tourist attractions like Mambilla Tourist Center, Gumpti Park and game reserve in Gashaka; and the Nwunyu Fishing festival in Ibi, which is usually held in April of each year where activities such as canoe racing, swimming competition and cultural dances are held. Other festivals are Purma of the Chamba in Donga, Takum and jibu culture dance in Bali, the Puje of Jukuns, Kuchecheb of Kutebs in Takum and Ussa, Kati of the Mambilla and host of others. Taraba is called \'Nature\'s gift to the nation\' as the state is rich and have many ethnic groups, including Jenjo, jibawa, Kuteb Chamba, Yandang, Mumuyes, Mambila, Wurkums, Fulanis, Jukun,Ichen,Tiv,Kaka, Hausa and Ndola. A striking historical fact about the State is that it encompasses part of the Mambilla Region which is famed as the Bantu cradle, having been occupied for some five millennia to date (Schwartz, 1972; Zeitlyn and Connell, 2003).</string>
    <string name="ardo">Ardo-Kola</string>
    <string name="ardo_details">"Ardo Kola Local Government Area was created in 1992. Its headquarters is in Sunkani. The local government has an area of 2,262 km² and a population of 86,921 at the 2006 census.
    The major tribes in the local government are Kona, Mumuye, Wurkun, Hausa/Fulani, Yandang while farming is their occupation. A lot of Yam, maize, guinea corn, groundnut, beniseed, cassava, are produced by the inhabitants. The postal code of the area is 660
    "</string>
    <string name="bali">Bali</string>
    <string name="bali_details">Bali Local Government Area was created in 1976. Its headquarters is in Bali.  It has an area of 9,146 km² and a population of 208,935 at the 2006 census. The major tribes are the Ichen, Jibawa, Chamba, Fulani and Kam. The major occupations of the people in Bali are farming, fishing, hunting and rearing of animals. The main crops produced are Yams, rice, Beans, Groundnut, Maize, Melon seeds (brown Equsi) and Sugarcane which are produced in commercial quantities. The postal code of the area is 672</string>
    <string name="donga">Donga</string>
    <string name="donga_details">Donga Local Government Area was created in 1992. Its headquarters is in Donga on the Donga River at 7°43′00″N 10°03′00″E. It has an area of 3,121 km² and a population of 134,111 at the 2006 census. The major tribes in Donga LGA are the Chambas, Jukuns, Ichen and Tiv. The main occupation of the people are fishing, farming, Hunting, caving and petty trading. There are variety of annual cultural festivals in Donga such as Purma of the Chamba and yearly Ichen cultural festival.  The postal code of the area is 671</string>
    <string name="gashaka">Gashaka</string>
    <string name="gashaka_details">Gashaka Local Government Area was created in 1989 with its headquarters in Serti town with an area covering 8,393 km² and a population of 87,781 at the 2006 census. The local government is populated by the Jibawa, Chamba, Fulani, Kuteb, Yandang, Tiv.  The people engage in farming, hunting and animal rearing. Rice, Maize, cassava and guinea corn are the main crops produced. The Gashaka Gumti National park is located in the local government area.  The postal code of the area is 672</string>
    <string name="gassol">Gassol</string>
    <string name="gassol_details">Gassol Local Government Area was created in 1992 with its headquarters in Mutum Biyu.  It has an area of 5,548 km² and a population of 244,749 at the 2006 census.   It is one of the most densely populated local government in the state. Indigenes are mostly farmers, fisher men and petty traders. The land is very fertile and produces large quantities of Yams, Rice, Maize, Groundnut and Melon seeds (brown Equsi) in commercial quantity. The major tribes are Fulani, Tiv, Wurkum and Wurbo, Jukuns. The postal code of the area is 672.</string>
    <string name="ibi">Ibi</string>
    <string name="ibi_details">Ibi Local Government Area of Taraba State, Nigeria was created in 1992.Its headquarters is Ibi town which is located on the south bank of the Benue River, opposite the influx of the much smaller Shemankar River. Both the Taraba River and the Donga River flow into the Benue within the LGA. Ibi was part of the Jukun kingdom (1720-1815) whose capital, Kororofa, was 35 miles east (up river). After the Fulani invasion Ibi became part of the Muri Emirate (1817-1892). Like the rest of Muri it was under the French governor Louis Mizon from 18921893.</string>
    <string name="jalingo">Jalingo</string>
    <string name="jalingo_details">Jalingo is a city in north-eastern Nigeria. It is the capital city of Taraba State and has an estimated population of 118,000. It is the seat of the government of Taraba state, seat of Muri emirate. Tribes in the local government include Kona, Fulani, Mumuye with a cosmopolitan coloration. Business, trading and civil service are the main occupation of the area.</string>
    <string name="karim">Karim-LAmido</string>
    <string name="karim_details">Karim Lamido Local Government Area was created in 1976 and has an area of 6,620 km² and a population of 195,844 at the 2006 census.The southern border of Karin Lamido is the Benue River and it is traversed by several tributaries of that river. The major tribes are Wurkun, Jenjo, Karinjo, Bandawa, Bikwin who engages in farming, fishing and animal husbandry. The postal code of the area is 662</string>
    <string name="kurmi">Kurmi</string>
    <string name="kurmi_details">Kurmi Local Government Area was created in 1992 with its headquarters in the town of Ba’issa. It has an area of 4,353 km² and a population of 91,531 according to 2006 census. The major tribes are Ndoro, Tigun and Ichen while their main occupations of the people farming and hunting. Palm oil, plantain, oranges and Banana are found in commercial quantities. The postal code of the area is 671</string>
    <string name="lau">Lau</string>
    <string name="lau_details">Lau Local Government Area with Lau as Its headquarters. It has an area of 1,660 km² and a population of 96,590 at the 2006 census. The local government was created in 1989, The major tribes include Yandang, Mumuye, Hausa/Fulani, Jenjo, Bakula, Kunini and Lau Habe Farming is the major preoccupation of the people with Guinea corn, Maize, cotton, rice, yam, beans as the stable crops while animal husbandry and fishing is also a pastime. The postal code of the area is 662.</string>
    <string name="sardauna">Sardauna</string>
    <string name="sardauna_details">Sardauna Local Government Area is located in the extreme southeast of Taraba State in Nigeria. It sits atop the Mambilla Plateau, which is dotted by other towns such as Maisamari and Nguroje. The capital of the LGA is Gembu, which is the principal town of various ethnic groups, such as Mambilla, Fulani, Kaka, Kambu, and Panso. Other ethnic groups from the mainstream Nigeria and the bordering Cameroon republic such as Hausa and Kanuri also live there. Farming and rearing of livestock is their pastime. Herds of cows sprawls the undulating hills while pear, banana, maize, cassava, tea and coffee are the main stables of the area. In contrast to the rather steamy and humid climate of most other parts of southeastern Nigeria, the climate in this part of the country (owing to its altitude) is relatively cool; most days in the dry season the temperature will reach 20-23 C and drop to 16-18 C at night, whilst in the wet season these averages fall a couple of degrees. The area is a tourist attraction.</string>
    <string name="takum">Takum</string>
    <string name="takum_details">Takum Local Government Area in Taraba State, Nigeria was created in 1976. Its headquarters are in the town of Takum. Takum borders the Republic of Cameroon in the south. It has an area of 2,503 km² and a population of 135,349 at the 2006 census. The local government is populated by Chamba, Jukun, Kuteb and Ichen. Farming is the people’s pastime. Major crops include cereals, roots and fruits among which are Maize, rice, guinea corn, yam, cassava, oranges, banana, cashew, mango, palm oil The postal code of the area is 671</string>
    <string name="ussa_details">Ussa Local Government Area in Taraba State, Nigeria has its headquarters in Lissam. Ussa borders the Republic of Cameroon in the south; the Donga River forms its northern boundary. It is a monolithic community with Kutebs as the tribe. Hunting and crop production include cereals, roots and fruits among which are Maize, rice, guinea corn, yam, cassava, oranges, banana, cashew, mango, palm oil are the people’s preoccupation It has an area of 1,495 km² and a population of 92,017 at the 2006 census and was created in 1992. The postal code of the area is 671</string>
    <string name="wukari">Wukari</string>
    <string name="wukari_deatils">Wukari Local Government Area in Taraba State, Nigeria. Its headquarters is in the town of Wukari on the A4 highway. The local government was created in 1976. The Donga River flows through the area and the Benue River forms a boundary with Nasarawa State to the northwest. The town is the base of the Wukari Federation, a traditional state. It has an area of 4,308 km² and a population of 241,546 at the 2006 census. The postal code of the area is 670</string>
    <string name="yoro">Yoro</string>
    <string name="yoro_deatails">Yorro Local Government Area in Taraba State, Nigeria has its headquarters in Pantisawa covering an area of 1,275 km² and a population of 89,410 at the 2006 census. The people here are Mumuye predominantly and they are farmers and hunters. Yam, groundnut, maize, cassava, rice, bambara nuts are the products of their farms, while goats, sheep and fowls are the animals reared in this area. The postal code of the area is 661</string>
    <string name="zing">Zing</string>
    <string name="zing_details">Zing Local Government Area in Taraba State, Nigeria has its headquarters in Zing with an area of 1,030 km² and a population of 127,363 at the 2006 census. 98% of the people in Zing are predominantly mumuye with twelve [12] clans. The postal code of the area is 661</string>
    <string name="ussa">Ussa</string>
</resources>